# Kubernetes-Cost-Optimizer

./: .dockerignore  .env.example  .gitignore  CHECKLIST.md  CODE_REVIEW_FINDINGS.md  Dockerfile  FINAL_ASSESSMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_REVIEW.md  PROJECT_STATUS.txt  QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP.md  START_HERE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
config/: config.yaml  logging.yaml  pricing.yaml  prometheus.yml
k8s_cost_optimizer/: __init__.py  cli.py  config.py  main.py
k8s_cost_optimizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
k8s_cost_optimizer/clients/: kubernetes.py  prometheus.py
k8s_cost_optimizer/models/: deployment.py  metrics.py  namespace.py  recommendation.py
k8s_cost_optimizer/promql/: __init__.py  builder.py  models.py  results.py
k8s_cost_optimizer/services/: metrics.py
k8s_cost_optimizer/utils/: logger.py
testing_evidence/: 01_cli_commands_output.txt  01_test_cli_commands.sh  02_scan_output.txt  02_test_scan.sh  03_env_vars_output.txt  03_test_environment_vars.sh  04_pytest_output.txt  04_test_pytest.sh  05_docker_build_output.txt  05_test_docker_build.sh  06_docker_run_output.txt  06_test_docker_run.sh  07_code_quality_output.txt  07_test_code_quality.sh  EVIDENCE_REPORT.md
tests/: test_k8s.py  test_metrics_service.py  test_prometheus_client.py  test_promql_builder.py
