[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-cost-optimizer"
version = "0.1.0"
description = "Kubernetes Cost Optimizer"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Pankaj Aswal" }
]

license = { text = "MIT" }

dependencies = [
    "kubernetes>=30.1.0",
    "prometheus-api-client>=0.6.0",
    "pandas>=2.2.2",
    "requests>=2.32.3",
    "PyYAML>=6.0.2",
    "rich>=13.9.4",
    "typer>=0.15.1",
    "jinja2>=3.1.5",
    "tabulate>=0.9.0"
]

[project.scripts]
k8s-cost = "k8s_cost_optimizer.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["k8s_cost_optimizer*"]
